Fix grid spacing

--- a/styles.css
+++ b/styles.css
@@ -9,43 +9,46 @@ ul {
 
 .container {
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(6, 1fr);
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: min-content;
+  max-height: min-content
 }
 
 .sidebar {
   padding: 15px;
   background-color: #29b1fb;
-  grid-area: 1/1/7/2;
+  grid-area: 1/1/11/2;
   color: white;
+  margin-bottom: 0;
 }
 
 .headbar {
   padding: 20px;
+  padding-bottom: 0;
   margin-left: 25px;
   margin-right: 25px;
-  grid-area: 1/2/2/7;
+  grid-area: 1/2/2/11;
   display: flex;
   flex-direction: column;
 }
 
 .top {
   display: flex;
-  margin-bottom: 20px;
+  padding-bottom: 20px;
 }
 .top img {
   height: 20px;
 }
 
 input {
-    margin-left: 20px;
-    border-radius: 20px;
-    padding: 5px 10px;
-    outline: none;
-    border: 1px solid #ccc;
-    background-color: rgb(205, 215, 232);
-    width: 60vh;
-    height: 3vh;
+  margin-left: 20px;
+  border-radius: 20px;
+  padding: 5px 10px;
+  outline: none;
+  border: 1px solid #ccc;
+  background-color: rgb(205, 215, 232);
+  width: 60vh;
+  height: 3vh;
 }
 
 .bottom {
@@ -55,15 +58,15 @@ input {
   height: 60px;
 }
 button {
-    background-color: #29b1fb;
-    color: white;
-    border: none;
-    font-size: 16px;
-    border-radius: 30px;
-    display: inline-block;
-    padding-left: 30px;
-    padding-right: 30px;
-    height: 30px;
+  background-color: #29b1fb;
+  color: white;
+  border: none;
+  font-size: 16px;
+  border-radius: 30px;
+  display: inline-block;
+  padding-left: 30px;
+  padding-right: 30px;
+  height: 30px;
 }
 
 .left {
@@ -71,23 +74,21 @@ button {
   flex-basis: 65%;
 }
 .greeting {
-    display: flex;
-    flex-direction: column;
-    margin-left: 30px;
-    align-self: center;
+  display: flex;
+  flex-direction: column;
+  margin-left: 30px;
+  align-self: center;
 }
 
-
 .top .right {
-    justify-content: flex-end;
-    gap: 25px;
+  justify-content: flex-end;
+  gap: 25px;
 }
 
 .bottom .right {
-    justify-content: space-around;
-    align-self: center;
+  justify-content: space-around;
+  align-self: center;
 }
-
 
 .right {
   display: flex;
@@ -96,25 +97,27 @@ button {
 }
 
 .main {
-    margin-top: -50px;
+  margin-top: 0;
   padding: 18px;
   background-color: #dbecf5;
-  grid-area: 2/2/7/7;
+  grid-area: 2/2/11/11;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(5, 1fr);
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: min-content;
 }
 
 .projects {
-  grid-area: 1/1/6/4;
+  grid-area: 1/1/9/7;
+  max-height: fit-content;
 }
 
 .announcements {
-  grid-area: 1/4/4/5;
+  grid-area: 1/7/5/9;
 }
 
 .trending {
-  grid-area: 4/4/6/5;
+  margin-top: 20px;
+  grid-area: 5/7/9/9;
 }
 
 .projectgrid {
@@ -134,32 +137,76 @@ button {
   border-left-style: solid;
   border-color: rgb(246, 209, 159);
   border-width: 5px;
-  max-height: fit-content;
   box-shadow: 3px 2px #ccc;
+  font-size: 16px;
 }
 
+.announcement {
+  margin-top: 15px;
+  margin-right: 20px;
+  padding: 10px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  border-radius: 20px;
+  border-left-style: solid;
+  border-color: rgb(241, 109, 109);
+  border-width: 2px;
+  max-height: fit-content;
+  box-shadow: 2px 1px #ccc;
+  font-size: 14px;
+}
+
+.trend {
+  margin-top: 15px;
+  margin-right: 20px;
+  padding: 10px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  border-radius: 20px;
+  border-left-style: solid;
+  border-color: rgb(179, 109, 241);
+  border-width: 2px;
+  max-height: fit-content;
+  box-shadow: 2px 1px #ccc;
+  font-size: 14px;
+}
+
+.announce {
+  padding: 22px 20px;
+}
 .desc {
-    flex-basis: 75%;
+  flex-basis: 75%;
 }
 
 .icons {
-    margin-top: 15px;
-    flex-basis: 25%;
-    align-self: flex-end;
+  flex-basis: 25%;
+  align-self: flex-end;
 }
 .icons svg {
-    height: 25px;
+  height: 25px;
+}
+
+.profile {
+  display: flex;
+  padding: 10px;
+}
+
+.profile img {
+  height: 30px;
+  width: 30px;
+  border-radius: 25px;
 }
 
 a {
   display: flex;
   align-items: center;
-
   padding: 8px;
 }
 
 .dashboard {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 .dashboard svg {
@@ -168,18 +215,16 @@ a {
 }
 
 a svg {
-    height: 20px;
-    width: 10px;
-    margin-right: 10px;
-    flex-basis: 20%;
+  height: 20px;
+  width: 10px;
+  margin-right: 10px;
+  flex-basis: 20%;
 }
 
 a h3 {
-    flex-basis: 80%;
+  flex-basis: 80%;
 }
 
 .primary {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
-
-
